Fixing z-index

--- a/_extensions.scss
+++ b/_extensions.scss
@@ -48,7 +48,7 @@ body {
             position: fixed;
             left: 0;
             top: 0;
-            z-index: 1;
+            z-index: 99;
         }
 
         @media (min-width: $ddr-breakpoint-sm) {
